# vulkan-template-monochrome-offline

./: CMakeLists.txt  README.md
shaders/: closesthit.rchit  miss.rmiss  raygen.rgen
src/: Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp  main.cpp
